Org: small fixes (mostly punctuation)

--- a/latex_docu/01a/doc.tex
+++ b/latex_docu/01a/doc.tex
@@ -27,24 +27,24 @@ will focus on are the heterogeneous team and limited budget.
 \subsection{The Team}\label{the-team}
 
 The project team consisted of seven masters students majoring in
-Computer Science, Computer Engineering and Information Systems
+Computer Science, Computer Engineering, and Information Systems
 Management. Moreover, the team members are native of five different
 countries with different cultural backgrounds and native languages. Due
-to varying English skills and professional experience, some discussion
+to varying English skills and prior professional experience, some discussions
 resulted to be time-consuming. In addition, most team members work besides
 being students, hence schedules had to be aligned accordingly.
 
 The team was organized into expert groups for the various building
-blocks with one person in a coordinative role as the project manager.
+blocks, with one person in a coordinative role as the project manager.
 Thus, a hierarchy was formed within the group that was hard to enforce
 since, in the end, the team was formed of peers. In the beginning, two
-teams had been formed: one that was responsible for the Importing
+sub-teams had been formed: one that was responsible for the Importing
 Framework and data sources, and one for the Database and Infrastructure.
 As the project progressed, however, the roles of several members shifted. In
 the end, one member focused on the modeling and administration of data
 sources, another member focused on the infrastructure provisioning and
 deployment, the team responsible for the importing framework consisted
-of three persons and lastly, one team two person team worked on the
+of three persons, and lastly, one team two person team worked on the
 backend.
 
 \subsection{Constraints}\label{constraints}
@@ -83,7 +83,7 @@ focus more on the actual challenges of the project itself.
 \subsection{Development Process \&
 Approach}\label{development-process-approach}
 
-To best commence the given challenges and requirements, we decided for
+To best approach the given challenges and requirements, we decided for
 an agile development process. To be more specific, we used a
 stripped-down Scrum approach. In this approach, the distinction between
 different roles was not strict so that every team member held
@@ -92,19 +92,19 @@ specific building block of the global architecture. The same is
 applicable for the role of Scrum Master, which was shared among the
 whole team, but still was mainly the responsibility of the Project
 Manager. Specifically, this means that every team member was encouraged
-to ensure an agile process and administrate issues. Furthermore, the
+to ensure an agile process and manage issues. Furthermore, the
 workflow was adapted to our specific scheduling needs so that we convened a
 sprint meeting weekly with an additional weekly interim meeting and
 omitted the daily scrum.
 
 To keep track of every issue and the global progress, we used a Trello board.
 Trello follows the Kanban model and arranges issues into lists. We created
-four lists to mirror the lifecycle of issues. The first list --product
-backlog-- is where requirements, issues, and general tasks that the product
-must satisfy were created. This list was populated continuously as the project
-progressed. The next lists included: tasks due until the next sprint meeting,
-tasks that were currently being worked on, and finally, finished tasks
-were archived.
+four lists to mirror the lifecycle of issues. The first list ---product
+backlog--- is where requirements, issues, and general tasks that the product
+must satisfy were created; this list was populated continuously as the project
+progressed. The next lists included: tasks due until the next sprint meeting
+---the sprint backlog---, tasks that were currently being worked on,
+and finally, finished tasks were archived.
 
 Slack was the chosen medium of communication, because it allows to
 distinguish between independent topics by using channels. Additionally,
