Architecture: fix broken reference

--- a/latex_docu/03/doc.tex
+++ b/latex_docu/03/doc.tex
@@ -98,7 +98,7 @@ availability of each service. Should a service terminate unexpectedly,
 the administrator has to restart the service to ensure the performance
 of the whole system. Though, the system should be still available during
 the downtime of a single service with some possible losses on
-functionality. Chapter \ref{sec:infrstructure} will discuss how
+functionality. Chapter \ref{sec:infrastructure} will discuss how
 we enabled recovery and fault-tolerance of the system.
 
 The next section, will presented the specific requirements for the given
