--- a/latex_docu/04/doc.tex
+++ b/latex_docu/04/doc.tex
@@ -1,4 +1,4 @@
-\section{Infrastructure}\label{infrastructure}
+\section{Infrastructure}\label{sec:infrastructure}
 
 \textbf{Authorship} Written by Andres Component developed by Amer
 
