Architecture: fixing broken figure reference

--- a/latex_docu/03/doc.tex
+++ b/latex_docu/03/doc.tex
@@ -298,7 +298,7 @@ evolve over time when the product owners add features to the system.
 This section will present an overview of the evolution of the
 architecture and the changes done over time.
 
-The changes in architecture are depicted in figure \ref{fig:architecture_1}.
+The changes in the architecture are depicted in Figure \ref{fig:evol_architecture}.
 
 Basically, the architecture was update in two places. First, the scheduling logic was exchanged. In the
 final architecture, we rely on Kubernetes and cron jobs to schedule the
