Infra: citing image

--- a/latex_docu/04/doc.tex
+++ b/latex_docu/04/doc.tex
@@ -65,9 +65,9 @@ running, were declared as Kubernetes \emph{Services}, which provide
 additional self-healing, should these critical components crash.
 
 \begin{figure}[htbp]
-\centering
-\includegraphics[width=1.00\textwidth]{images/Kubernetes.png}
-\caption{}
+  \centering
+  \includegraphics[width=0.80\textwidth]{images/Kubernetes.png}
+  \caption{Kubernetes architecture diagram \cite{WikiCommons:KubernetesArchitecture}}
 \end{figure}
 
 Additionally, internal DNS provides ease-of-use by being able to refer
