--- a/latex_docu/references.bib
+++ b/latex_docu/references.bib
@@ -71,4 +71,10 @@
  isbn = {3864918421}
 }
 
-
+@misc{WikiCommons:KubernetesArchitecture,
+  author = {{Khtan66 (Own work) [CC BY-SA 4.0], via Wikimedia Commons}},
+  title = {Kubernetes},
+  year = {2016},
+  note = {[Online; accessed July 28, 2017]},
+  url = {https://upload.wikimedia.org/wikipedia/commons/b/be/Kubernetes.png}
+}
